# event-hub

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  entrypoint.sh  manage.py  pyproject.toml
backend/api/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_event_is_cancelled.py  0003_event_created_by.py
backend/api/services/: __init__.py  email.py
backend/backend/: middleware.py  settings.py  urls.py
backend/jwt_auth/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
backend/jwt_auth/migrations/: 0001_initial.py  0002_rename_fullname_user_username.py
backend/jwt_auth/services/: __init__.py  email.py  token.py
frontend/: .env.example  .prettierrc  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  format.ts  react-env.d.ts
frontend/src/api/: auth.ts  event.ts  feedback.ts  instance.ts
frontend/src/components/: Back.tsx  Theme.tsx
frontend/src/pages/: CreateEventPage.tsx  CreateFeedbackPage.tsx  EventPage.tsx  EventsListPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  PrivacyPolicy.tsx  RegistrationPage.tsx  ResetPasswordPage.tsx  VerifyCodePage.tsx
nginx/: http.conf  https.conf
node-backend/: .prettierrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
node-backend/prisma/: schema.prisma
node-backend/src/: bootstrap.ts  db.ts  main.ts
(+25 files in other folders)
